# pyrene

./: .gitignore  README.md  pyproject.toml
examples/TCSPC/: fit_trace_tail.py  fit_trace_tail2.py  fit_trace_with_IRF.py
examples/TCSPC/data/: ACN.asc  DCM.asc  IRF.asc  IRF_375.asc  JAS-CN_DMSO.asc  MNP.asc  TOL.asc  dilute.asc
examples/steady_state/absorption/: abs_file2.csv  calc_oscillator_strength.py  comp_FTIR_with_theory.py  comp_UVvis_with_theory.py  extinction_coefficient_regression.py  get_concentration.py  get_extinction_coefficient.py  plot_FTIR.py  plot_absorption_example1.py  plot_absorption_example2.py  plot_difference.py  solvatochromism.py
examples/steady_state/emission/: TDM_rep.py  plot_emission_spectrum.py  plot_emission_with_abs.py  plot_emission_with_excitation.py  solvatochromism.py
examples/transient_absorption/contour/: compare_contours.py  plot_contour_example1.py  plot_contour_example2.py
examples/transient_absorption/convert_to_npy/: dA_from_txt.npy  npy_to_txt.py  txt_to_npy.py  wavelength.txt
examples/transient_absorption/global analysis/: TRIR.py  global_analysis_TRIR.py  global_analysis_nsTA.py  global_analysis_parallel.py  global_analysis_sequential.py  global_analysis_target.py
examples/transient_absorption/kinetics/: fit_kinetics.py  plot_kinetics_example1.py
examples/transient_absorption/movie/: movie_TRIR.py  movie_example1.py  movie_example2.py  movie_example3.py  movie_example4.py  movie_nanoTA.py
examples/transient_absorption/spectra/: TRIR.py  compare_overviews.py  plot_overview.py  plot_spectra_example1.py  (+1 more)
(+92 files in other folders)
