[project]
name = "pyrene"
version = "0.1.0"
description = "PYthon toolkit for Research in Excited-state dyNamics and spEctroscopy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brukeropus>=1.4.3",
    "cclib>=1.8.1",
    "ipython>=9.14.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
]

[project.scripts]
energy = "pyrene.standard.energy_converter:main"
laser = "pyrene.standard.laser_energy:main"
calc = "pyrene.standard.calculator:main"
solvs = "pyrene.solvent_database.solvents:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
